Fix logic error in workflow.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Set up Node.js
-      if: ${{ matrix.os != 'windows-latest' }}
+      if: ${{ matrix.os == 'windows-latest' }}
       uses: actions/setup-node@v2
       with:
         node-version: 12.x
