--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,6 @@ jobs:
         node-version: 12.x
     - name: Test
       run: |
-        python3 test_all.py
+        python3 -u test_all.py
       env:
         PY_DEBUG: 1
