--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,8 +45,44 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 12.x
-    - name: Test
+    # Run tests one-by-one to see progress more quickly
+    - name: Test D
       run: |
-        python3 -u test_all.py
+        python3 test_all.py dlang
+      env:
+        PY_DEBUG: 1
+    - name: Test C#/.NET
+      run: |
+        python3 test_all.py dotnet
+      env:
+        PY_DEBUG: 1
+    - name: Test Go
+      run: |
+        python3 test_all.py go
+      env:
+        PY_DEBUG: 1
+    - name: Test JavaScript
+      run: |
+        python3 test_all.py javascript
+      env:
+        PY_DEBUG: 1
+    - name: Test Kotlin/Java
+      run: |
+        python3 test_all.py jvm
+      env:
+        PY_DEBUG: 1
+    - name: Test Python
+      run: |
+        python3 test_all.py python
+      env:
+        PY_DEBUG: 1
+    - name: Test Ruby
+      run: |
+        python3 test_all.py ruby
+      env:
+        PY_DEBUG: 1
+    - name: Test Rust
+      run: |
+        python3 test_all.py rust
       env:
         PY_DEBUG: 1
