--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,9 +71,16 @@ jobs:
         python3 test_all.py jvm
       env:
         PY_DEBUG: 1
-    - name: Test Python
+    - name: Test Python on POSIX
+      if: ${{ matrix.os != 'windows-latest' }}
       run: |
         python3 test_all.py python
+      env:
+        PY_DEBUG: 1
+    - name: Test Python on Windows
+      if: ${{ matrix.os == 'windows-latest' }}
+      run: |
+        python test_all.py python
       env:
         PY_DEBUG: 1
     - name: Test Ruby
