--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,10 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
@@ -32,6 +28,8 @@ jobs:
       with:
         go-version: 1.17
     - name: Set up Ruby
+      # Note: this changes the path, so make sure the Python setup is done after this
+      # step - otherwise the Python interpreter that runs won't be the expected one
       uses: ruby/setup-ruby@473e4d8fe5dd94ee328fdfca9f8c9c7afc9dae5e
       with:
         ruby-version: 2.7.2
@@ -45,6 +43,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 12.x
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
     # Run tests one-by-one to see progress more quickly
     - name: Test D
       run: |
