--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - name: Set up Elixir
+      uses: erlef/setup-beam@v1
+      with:
+        otp-version: 22.2
+        elixir-version: 1.9.1
     # Run tests one-by-one to see progress more quickly
     - name: Test D
       run: |
@@ -78,6 +83,11 @@ jobs:
         python3 test_all.py ruby
       env:
         PY_DEBUG: 1
+    - name: Text Elixir
+      run: |
+        python3 test_all.py elixir
+      env:
+        PY_DEBUG: 1
     - name: Test Python
       #if: ${{ matrix.os != 'windows-latest' }}
       run: |
@@ -90,6 +100,7 @@ jobs:
         #python test_all.py python
       #env:
         #PY_DEBUG: 1
+
     - name: Test Kotlin/Java
       run: |
         python3 test_all.py jvm
