--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,6 +48,7 @@ jobs:
       with:
         python-version: 3.9
     - name: Set up Elixir
+      if: ${{ matrix.os != 'windows-latest' }}
       uses: erlef/setup-beam@v1
       with:
         otp-version: 22.2
@@ -84,6 +85,7 @@ jobs:
       env:
         PY_DEBUG: 1
     - name: Text Elixir
+      if: ${{ matrix.os != 'windows-latest' }}
       run: |
         python3 test_all.py elixir
       env:
