--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,15 +47,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
-    - name: Set up Elixir (non-MacOS)
+    - name: Set up Elixir (MacOS excepted)
       if: ${{ matrix.os != 'macos-latest' }}
       uses: erlef/setup-beam@v1
-      with:
-        otp-version: 22.2
-        elixir-version: 1.9.1
-    - name: Set up Elixir (MacOS)
-      if: ${{ matrix.os == 'macos-latest' }}
-      uses: actions/setup-elixir@v1
       with:
         otp-version: 22.2
         elixir-version: 1.9.1
@@ -90,7 +84,7 @@ jobs:
         python3 test_all.py ruby
       env:
         PY_DEBUG: 1
-    - name: Text Elixir
+    - name: Text Elixir (MacOS excepted)
       if: ${{ matrix.os != 'macos-latest' }}
       run: |
         python3 test_all.py elixir
