--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,7 @@ jobs:
       with:
         node-version: 12.x
     - name: Set up Nim
-      uses: actions-nim/setup-nim@v1
+      uses: jiro4989/setup-nim-action@v1
       with:
         nim-version: '1.4.4'
     - name: Set up Python 3.9
