--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
@@ -48,7 +48,7 @@ jobs:
       with:
         nim-version: '1.6.0'
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: 3.9
     - name: Set up Elixir (MacOS excepted)
@@ -61,6 +61,18 @@ jobs:
       uses: dart-lang/setup-dart@v1
       with:
         sdk: stable
+    - name: Prerequisite for Windows Lua installation
+      if: ${{ matrix.os == 'windows-latest' }}
+      uses: ilammy/msvc-dev-cmd@v1
+    - name: Set up Lua
+      uses: jkl1337/gh-actions-lua@v11
+      with:
+        luaVersion: '5.4'
+    - name: Install Luarocks
+      uses: jkl1337/gh-actions-luarocks@v5
+    - name: Install dependencies
+      run: |
+        luarocks install cfg-lib
     - name: Print Windows path
       if: ${{ matrix.os == 'windows-latest' }}
       run: |
@@ -110,6 +122,11 @@ jobs:
     - name: Test Dart
       run: |
         python3 test_all.py dart
+      env:
+        PY_DEBUG: 1
+    - name: Test Lua
+      run: |
+        python3 test_all.py lua
       env:
         PY_DEBUG: 1
     - name: Test Python
