--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Set up Nim
       uses: jiro4989/setup-nim-action@v1
       with:
-        nim-version: '1.6.0'
+        nim-version: '2.2.4'
     - name: Set up Python 3.9
       uses: actions/setup-python@v5
       with:
@@ -55,6 +55,8 @@ jobs:
     - name: Set up Elixir (MacOS excepted)
       if: ${{ matrix.os != 'macos-latest' }}
       uses: erlef/setup-beam@v1
+      env:
+        ImageOS: win22
       with:
         otp-version: '28.1'
         elixir-version: 1.19.2
