--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,8 +52,14 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
-    - name: Set up Elixir (MacOS excepted)
-      if: ${{ matrix.os != 'macos-latest' }}
+    - name: Set up Elixir (Ubuntu)
+      if: ${{ matrix.os == 'ubuntu-latest' }}
+      uses: erlef/setup-beam@v1
+      with:
+        otp-version: '28.1'
+        elixir-version: 1.19.2
+    - name: Set up Elixir (Windows)
+      if: ${{ matrix.os == 'windows-latest' }}
       uses: erlef/setup-beam@v1
       env:
         ImageOS: win22
