--- a/.github/workflows/nim.yml
+++ b/.github/workflows/nim.yml
@@ -20,6 +20,11 @@ jobs:
       uses: jiro4989/setup-nim-action@v2
       with:
         nim-version: '2.2.4'
+    - name: Install libpcre3
+      if: ${{ matrix.os == 'ubuntu-latest' }}
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libpcre3
     - name: Set up Python 3.9
       uses: actions/setup-python@v5
       with:
