--- a/.github/workflows/jvm.yml
+++ b/.github/workflows/jvm.yml
@@ -21,6 +21,10 @@ jobs:
       with:
         java-version: 17
         distribution: 'adopt'
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        gradle-version: '8.13'
     - name: Set up Python 3.9
       uses: actions/setup-python@v5
       with:
