--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -3,8 +3,9 @@ name: Elixir tests
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      elixir/**
+      test_all.py
 
 jobs:
   build:
