--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,8 +3,12 @@ name: Python tests
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      python/**
+      test_all.py
+
+  #pull_request:
+    #branches: [ main ]
 
 jobs:
   build:
