--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -3,8 +3,9 @@ name: Dart tests
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      dart/**
+      test_all.py
 
 jobs:
   build:
