--- a/.github/workflows/lua.yml
+++ b/.github/workflows/lua.yml
@@ -3,8 +3,10 @@ name: Lua tests
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      lua/**
+      test_all.py
+
 
 jobs:
   build:
