--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,6 +6,7 @@ on:
     paths:
       rust/**
       test_all.py
+      .github/workflows/rust.yml
 
   #pull_request:
     #branches: [ main ]
@@ -17,6 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        rust-version: ['1.77.2', '1.87.0', '1.91.0']
 
     steps:
     - uses: actions/checkout@v4
@@ -24,6 +26,10 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
+    - name: Setup Rust
+      uses: moonrepo/setup-rust@v1
+      with:
+        channel: ${{ matrix.rust-version }}
     - name: Test Rust
       run: |
         python3 test_all.py rust
