--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches: [ main ]
     paths:
-      rust/**
-      test_all.py
-      .github/workflows/rust.yml
+      - rust/**
+      - test_all.py
+      - .github/workflows/rust.yml
 
   #pull_request:
     #branches: [ main ]
