Correct more trigger typos.

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches: [ main ]
     paths:
-      dart/**
-      test_all.py
+      - dart/**
+      - test_all.py
+      - .github/workflows/dart.yml
 
 jobs:
   build:
