--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches: [ main ]
     paths:
-      elixir/**
-      test_all.py
+      - elixir/**
+      - test_all.py
+      - .github/workflows/elixir.yml
 
 jobs:
   build:
