--- a/.github/workflows/nim.yml
+++ b/.github/workflows/nim.yml
@@ -4,8 +4,9 @@ on:
   push:
     branches: [ main ]
     paths:
-      nim/**
-      test_all.py
+      - nim/**
+      - test_all.py
+      - .github/workflows/nim.yml
 
   #pull_request:
     #branches: [ main ]
