--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
     paths:
       - python/**
-      = test_all.py
+      - test_all.py
       - .github/workflows/python.yml
 
   #pull_request:
